let overlapping with NPCDialogueTrigger also bring up the dialogue widget and change UI mode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,4 +51,5 @@ ManualIPAddress=
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TestDialogueMap.TestDialogueMap
 GameDefaultMap=/Game/TestDialogueMap.TestDialogueMap
+GlobalDefaultGameMode=/Game/spGameMode.spGameMode_C
 
