cleaned orphaned maps and uassets

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,7 +49,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TestDialogueMap.TestDialogueMap
-GameDefaultMap=/Game/TestDialogueMap.TestDialogueMap
-GlobalDefaultGameMode=/Game/spGameMode.spGameMode_C
+EditorStartupMap=/Game/Maps/TestDialogueMap.TestDialogueMap
+GameDefaultMap=/Game/Maps/TestDialogueMap.TestDialogueMap
+GlobalDefaultGameMode=/Game/Core/BP_spGameMode.BP_spGameMode_C
 
